# mailogle

./: README.md  mailogle.py  pyproject.toml
.github/: FUNDING.yml
modules/: _template.py  amazon.py  appletv.py  base.py  facebook.py  github.py  gravatar.py  hudsonrock.py  instagram.py  myfitnesspal.py  netflix.py  pinterest.py  snapchat.py  spotify.py  wordpress.py  x.py
tests/: test_base.py  test_github.py  test_gravatar.py  test_hudsonrock.py  test_instagram.py  test_snapchat.py  test_spotify.py  test_wordpress.py
