[tool.poetry]
name = "mailogle"
version = "0.1.0"
description = "A simple tool for email OSINT."
authors = ["Dinçer Tekin <dincertekin@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
rich = "^13.9.2"
pyfiglet = "^1.0.2"
tabulate = "^0.9.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests-mock = "^1.12.1"


[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
